# TrainingHub

./: .gitignore  GODISHERE.md  PLAN.md  README.md  TrainingHubImplementationPlan.md  fix_plan.md  math-benchmarks.md  pyproject.toml
backend/: requirements.txt
backend/tests/: conftest.py  test_auth_and_models.py  test_capability_transfers.py  test_datasets.py  test_hub.py  test_inference_run.py  test_jobs_and_cleanup.py  test_training_rows.py  test_training_telemetry.py
backend/traininghub/: __init__.py  main.py
backend/traininghub/api/: artifacts.py  auth.py  benchmarks.py  capability_transfers.py  cleanup.py  datasets.py  dependencies.py  hub.py  inference.py  jobs.py  models.py  system.py
backend/traininghub/core/: config.py  database.py  id_utils.py  security.py
backend/traininghub/services/: artifacts.py  benchmark_catalog.py  calibration_pairs.py  capability_transfers.py  cleanup.py  datasets.py  deletion.py  gpu.py  hub.py  inference.py  inference_run.py  jobs.py  model_files.py  model_introspection.py  model_registry.py  training.py
backend/traininghub/workers/: _lm_eval_runner.py  common.py  run_align_capability.py  run_benchmark_arc.py  run_benchmark_code.py  run_benchmark_hellaswag.py  run_benchmark_ifeval.py  run_benchmark_math.py  run_benchmark_mmlu.py  run_cleanup.py  (+10 more)
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
scripts/: build_frontend.sh  deploy_morrigan.sh  morrigan_acceptance_smoke.sh  morrigan_cleanup_traininghub_only.sh  morrigan_stop_llama_server.sh  run_backend.sh  run_dev.sh
(+14 files in other folders)
